<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <com.smcv.xyx.sh.claimpda.customview.TitleBar
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleColor"
        app:imgLeft="@mipmap/ico_back"
        app:textMid="@string/confirm_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/style_rl"
                android:layout_marginTop="@dimen/dimens_6"
                android:background="@color/white">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/after_sale_code" />

                <TextView
                    android:id="@+id/tv_afterSale_code"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/after_sale_name" />

                <TextView
                    android:id="@+id/tv_afterSale_name"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/vin" />

                <TextView
                    android:id="@+id/tv_vin_num"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/engine_no" />

                <TextView
                    android:id="@+id/tv_engine_no"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/return_weekly" />

                <TextView
                    android:id="@+id/tv_return_weekly"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/line_no" />

                <TextView
                    android:id="@+id/tv_line_no"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_6"
                android:background="@color/lightGray" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/claim_seats" />

                <TextView
                    android:id="@+id/tv_claim_num"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/claim_type" />

                <TextView
                    android:id="@+id/tv_claim_type"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/claim_parts_code" />

                <TextView
                    android:id="@+id/tv_parts_code"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/claim_parts_name" />

                <TextView
                    android:id="@+id/tv_parts_name"
                    style="@style/style_tv_right" />
            </RelativeLayout>

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="@string/claim_parts_num" />

                <TextView
                    android:id="@+id/tv_parts_num"
                    style="@style/style_tv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <View style="@style/style_view_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_6"
                android:background="@color/lightGray" />

            <RelativeLayout
                style="@style/style_rl"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/daiding_reason"
                    style="@style/style_tv_left"
                    android:text="@string/daiding_reason" />

                <TextView
                    android:id="@+id/tv_daiding_desc"
                    style="@style/CommonTextStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/daiding_reason"
                    android:gravity="center_vertical|right" />

            </RelativeLayout>

            <RelativeLayout style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="判定结果" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shap_huoqian_query">

                    <Spinner
                        android:id="@+id/ll_result_spinner"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:entries="@array/result" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_fact_num"
                style="@style/style_rl">

                <TextView
                    style="@style/style_tv_left"
                    android:text="实际数量" />

                <EditText
                    android:id="@+id/et_fact_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="请输入实际入库数量"
                    android:inputType="number"
                    android:gravity="center_vertical|right"
                    android:minHeight="44dp"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/text_14" />
            </RelativeLayout>

            <RelativeLayout style="@style/style_rl">

                <TextView
                    android:id="@+id/tv_feedback"
                    style="@style/style_tv_left"
                    android:text="反馈结果" />

                <EditText
                    android:id="@+id/et_feedback_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_feedback"
                    android:background="@color/white"
                    android:hint="请输入反馈结果"
                    android:gravity="center_vertical|right"
                    android:minHeight="44dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:textSize="@dimen/text_14" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_20"
                android:layout_marginTop="@dimen/dimens_20"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_btn_exit"
                    style="@style/btnStyle"
                    android:background="@drawable/select_btn_red"
                    android:text="@string/exit" />

                <TextView
                    android:id="@+id/tv_btn_confirm"
                    style="@style/btnStyle"
                    android:layout_marginLeft="@dimen/dimens_30"
                    android:background="@drawable/select_btn_blue"
                    android:text="@string/confirm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>