<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smcv.xyx.sh.claimpda.ui.MainActivity">

    <com.smcv.xyx.sh.claimpda.customview.TitleBar
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bg="@color/titleColor"
        app:textMid="@string/home"
        app:textRight="退出" />

    <!--<LinearLayout-->
    <!--android:id="@+id/ll_test"-->
    <!--android:layout_width="match_parent"-->
    <!--android:visibility="gone"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="@dimen/dimens_10">-->

    <!--<TextView-->
    <!--android:id="@+id/tv_wuliu"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/dimens_10"-->
    <!--android:layout_weight="1"-->
    <!--android:background="#00ff00"-->
    <!--android:gravity="center"-->
    <!--android:text="物流公司"-->
    <!--android:textSize="@dimen/text_18" />-->

    <!--<TextView-->
    <!--android:id="@+id/tv_cangku"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/dimens_10"-->
    <!--android:layout_weight="1"-->
    <!--android:background="#00ff00"-->
    <!--android:gravity="center"-->
    <!--android:text="仓库"-->
    <!--android:textSize="@dimen/text_18" />-->

    <!--<TextView-->
    <!--android:id="@+id/tv_shouhou"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/dimens_10"-->
    <!--android:layout_weight="1"-->
    <!--android:background="#00ff00"-->
    <!--android:gravity="center"-->
    <!--android:text="售后"-->
    <!--android:textSize="@dimen/text_18" />-->
    <!--</LinearLayout>-->

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dimens_10"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_accept_carriage"
                style="@style/homeTextViewStyle"
                android:background="@drawable/select_btn_blue"
                android:text="@string/chengyun" />

            <TextView
                android:id="@+id/tv_warehouse_sign"
                style="@style/homeTextViewStyle"
                android:background="@drawable/select_btn_blue"
                android:text="@string/house_sign" />

            <TextView
                android:id="@+id/tv_oldParts_enter"
                style="@style/homeTextViewStyle"
                android:background="@drawable/select_btn_orange"
                android:text="@string/oldparts_enter" />

            <TextView
                android:id="@+id/tv_second_judgement"
                style="@style/homeTextViewStyle"
                android:background="@drawable/select_btn_blue"
                android:text="二次判定" />

            <TextView
                android:id="@+id/tv_oldParts_exit"
                style="@style/homeTextViewStyle"
                android:background="@drawable/select_btn_red"
                android:text="@string/oldparts_exit" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="没有数据，点击图片重新加载" />
    </LinearLayout>
</LinearLayout>
